--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-beta3",
   "description": "Augmented Reality with React",
   "main": "build/react-ar.min.js",
-  "author": "Nitin Tulswani",
+  "author": "jfr23fbq",
   "license": "MIT",
   "files": ["build"],
   "peerDependencies": {
